[package]
name = "auth_sessions"
version = "0.1.0"
edition = "2024"
description = "Session-based authentication for web applications"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4.41" , features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
serde_json = "1.0"
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["sync", "macros", "full", "rt-multi-thread"] }
base64 = "0.22.1"
ring = "0.17.14"
dotenv_lib = "0.6.0"
sqlx = { version = "0.8.6", features = ["sqlite", "postgres", "runtime-tokio"] }
serde = "1.0.219"
bcrypt = "0.17.0"
axum = "0.8.4"
tower-cookies = "0.11.0"
http = "1.3.1"
mongodb = "3.2.4"
ulid = "1.2.1"
rocket = { version = "0.5.1", features = ["json"] }